--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="utf-8">
   
-  <title>Litten的博客</title>
+  <title>张宏亮的博客</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="description" content="华中科技大学09级，就职于腾讯SNG。擅长各项前端技能，深入研究移动端开发与前端性能。非专业视觉设计师。此为博客一枚。">
+  <meta name="description" content="">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Litten的博客">
+<meta property="og:title" content="张宏亮的博客">
 <meta property="og:url" content="http://litten.github.io/index.html">
-<meta property="og:site_name" content="Litten的博客">
-<meta property="og:description" content="华中科技大学09级，就职于腾讯SNG。擅长各项前端技能，深入研究移动端开发与前端性能。非专业视觉设计师。此为博客一枚。">
+<meta property="og:site_name" content="张宏亮的博客">
+<meta property="og:description" content="">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="Litten的博客">
-<meta name="twitter:description" content="华中科技大学09级，就职于腾讯SNG。擅长各项前端技能，深入研究移动端开发与前端性能。非专业视觉设计师。此为博客一枚。">
+<meta name="twitter:title" content="张宏亮的博客">
+<meta name="twitter:description" content="">
   
-    <link rel="alternative" href="/atom.xml" title="Litten的博客" type="application/atom+xml">
+    <link rel="alternative" href="/atom.xml" title="张宏亮的博客" type="application/atom+xml">
   
   
     <link rel="icon" href="/favicon.png">
